# SeriousChess

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  README.md  fetch_sdl.sh
src/: Render.cpp  Render.h  main.cpp
src/Constants/: Constants.h  GameEntities.h
src/Init/: loaders.cpp  loaders.h
src/Logic/: GameLogic.cpp  GameLogic.h
